more preparation of main

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -568,4 +568,7 @@
 		<string name="skill_level_1">Beginner</string>		
 		<string name="skill_level_2">Fancy</string>
 		<string name="skill_level_3">Clever</string>
+		<string name="main_choose">Tap an opponent to start a game</string>
+		<string name="main_game_start_prompt">%s is ready to play.  Are you ready?</string>
+		<string name="main_game_start_prompt_title">start a game</string>
 </resources>
