--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -332,18 +332,18 @@
  	<string name="scoreboard_1_letter_left">1 letter left</string>
  	<string name="scoreboard_num_points">%s points</string>
  	<string name="scoreboard_num_points_scored">%s points scored</string>
- 	<string name="gameboard_recall_button_text">recall</string>
- 	<string name="gameboard_shuffle_button_text">shuffle</string>
+ 	<string name="gameboard_recall_button_text">RECALL</string>
+ 	<string name="gameboard_shuffle_button_text">SHUFFLE</string>
  	<string name="gameboard_chat_button_text">chat</string>
- 	<string name="gameboard_play_button_text">play</string>
+ 	<string name="gameboard_play_button_text">PLAY</string>
  	<string name="gameboard_rematch_button_text">rematch</string>
- 	<string name="gameboard_resign_button_text">concede</string>
+ 	<string name="gameboard_resign_button_text">CONCEDE</string>
  	<string name="gameboard_decline_button_text">decline</string>
- 	<string name="gameboard_skip_button_text">skip</string>
- 	<string name="gameboard_cancel_button_text">cancel</string>
- 	<string name="gameboard_played_words_button_text">look up\nwords</string>
- 	<string name="gameboard_hopper_peek_button_text">peek at\nhopper</string>
- 	<string name="gameboard_swap_button_text">swap</string>
+ 	<string name="gameboard_skip_button_text">SKIP</string>
+ 	<string name="gameboard_cancel_button_text">CANCEL</string>
+ 	<string name="gameboard_played_words_button_text">LOOK UP\nWORDS</string>
+ 	<string name="gameboard_hopper_peek_button_text">PEEK AT\nHOPPER</string>
+ 	<string name="gameboard_swap_button_text">SWAP</string>
  	<string name="gameboard_swap_dialog_button_text">swap letters</string>
  	<string name="gameboard_swap_dialog_title_text">tap the letter(s) to swap</string>
  	<string name="gameboard_swap_dialog_please_choose_text">please choose the letters to swap or tap cancel</string>
