punch list tweaks and bugs

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -280,12 +280,12 @@
 		
 		<string name="hopper_peek_letter">%1$s - %2$s</string>
 		<string name="gameboard_hopper_peek_dialog_title">peek</string>
-		<string name="gameboard_hopper_peek_dialog_decription">there are %1$s remaining letters in the hopper and %2$s\'s tray</string>
+		<string name="gameboard_hopper_peek_dialog_decription">There are %1$s remaining letters in the hopper and %2$s\'s tray.</string>
 		<string name="share_subject">WordSmash</string>
 		<string name="share_message">Check out WordSmash for Android in the Google Play store.  Test your crossword skills against the character of your choice.  Always play at your own pace, as fast as you desire.</string>
 		<string name="hopper_peek_purchase_offer">Now that the free previews are over, peeking at the hopper requires a Peek at the Hopper Upgrade or a Premium Upgrade.  Just tap the button to go to the store to get unlimited usage of hopper peeks.</string>
-		<string name="hopper_peek_preview">%1$s\nYou have %2$s more free uses before needing a Peek at the Hopper upgrade or a Premium Upgrade.</string>
-		<string name="hopper_peek_1_preview_left">%1$s\nYou have 1 more free use before needing a Peek at the Hopper upgrade or a Premium Upgrade.</string>
+		<string name="hopper_peek_preview">%1$s\n\nYou have %2$s more free uses before needing a Peek at the Hopper upgrade or a Premium Upgrade.</string>
+		<string name="hopper_peek_1_preview_left">%1$s\n\nYou have 1 more free use before needing a Peek at the Hopper upgrade or a Premium Upgrade.</string>
 		<string name="hopper_peek_no_previews_left">%s\n\nTo keep using hopper peeks, you\'ll need a Peek at the Hopper upgrade or a Premium Upgrade!\n</string>
 
 		<string name="word_definition_purchase_offer">Now that the free previews are over, looking up word definitions requires a Word Definition Lookups upgrage or a Premium Upgrade.  Just tap the button to go to the store to get unlimited lookups of word definitions.  It\'s a great way to learn as you play!</string>
